--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -40,6 +40,7 @@
     top: 50%;
     transform: translateY(-50%);
     color: $color;
+    -webkit-background-clip: text;
     background-clip: text;
     opacity: $opacity;
     transition: all 300ms;
